feat(logging): Enhance FreeSWITCH log management with multiple sources and SIP trace functionality

--- a/admin/lang/de.json
+++ b/admin/lang/de.json
@@ -196,6 +196,7 @@
     "level": "Level",
     "lines": "Zeilen",
     "entries": "Einträge",
+    "sources": "Quellen",
     "no_logs": "Keine Logs verfügbar",
     "esl_failed": "ESL-Verbindung fehlgeschlagen",
     "saved": "Gespeichert",
