feat(dashboard): Add call statistics, remove logs preview
- Add parse_call_statistics() to get CALLS-IN/OUT, FAILED-CALLS-IN/OUT from sofia profiles
- Display call stats for internal/external profiles on dashboard
- Show totals with failed call counts
- Remove logs preview section from dashboard (moved to dedicated page)
- Add translations for call_stats, total_in, total_out, failed

--- a/admin/lang/de.json
+++ b/admin/lang/de.json
@@ -101,7 +101,11 @@
     "environment": "Umgebungsvariablen",
     "no_gateways": "Keine Gateways konfiguriert",
     "no_users_registered": "Keine Benutzer registriert",
-    "no_logs": "Keine Logs"
+    "no_logs": "Keine Logs",
+    "call_stats": "Anrufstatistik",
+    "total_in": "Gesamt Eingehend",
+    "total_out": "Gesamt Ausgehend",
+    "failed": "fehlgeschlagen"
   },
 
   "calls": {
