feat(esl): Implement ESL event subscriber for real-time FreeSWITCH event streaming feat(logging): Update log display to support ESL events and connection status feat(i18n): Add ESL event-related translations in English and German chore(docker): Configure event_socket.conf for ESL event streaming

--- a/admin/lang/de.json
+++ b/admin/lang/de.json
@@ -206,7 +206,11 @@
     "saved": "Gespeichert",
     "failed_to_load": "Logs konnten nicht geladen werden",
     "server_not_running": "läuft nicht",
-    "debug_dump": "Debug-Ausgabe"
+    "debug_dump": "Debug-Ausgabe",
+    "esl_events": "ESL-Ereignisse",
+    "esl_connected": "Verbunden",
+    "esl_disconnected": "Getrennt",
+    "events_buffer": "Ereignis-Puffer"
   },
 
   "security": {
